--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,7 +32,10 @@
     "titleBar.activeBackground": "#de5e11",
     "titleBar.activeForeground": "#e7e7e7",
     "titleBar.inactiveBackground": "#de5e1199",
-    "titleBar.inactiveForeground": "#e7e7e799"
+    "titleBar.inactiveForeground": "#e7e7e799",
+    "sash.hoverBorder": "#ef7a33",
+    "statusBarItem.remoteBackground": "#de5e11",
+    "statusBarItem.remoteForeground": "#e7e7e7"
   },
   "peacock.color": "#de5e11"
 }
